--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,3 +1,5 @@
+<p id="notice"><%= notice %></p>
+
 <h1>Listing tasks</h1>
 
 <table>
@@ -20,7 +22,6 @@
         <td><%= task.deadline %></td>
         <td><%= task.done %></td>
         <td><%= task.duration %></td>
-        <td><%= link_to 'Show', task %></td>
         <td><%= link_to 'Edit', edit_task_path(task) %></td>
         <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
