--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,5 +9,10 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
+ *= require bootstrap.min
+ *= require bootstrap-theme.min  
  *= require_tree .
  */
+body {
+  padding-top: 60px;
+}
