--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,8 +1,12 @@
-<p id="notice"><%= notice %></p>
-
+<% if notice %> 
+  <p id="notice" class="alert alert-success alert-dismissable fade in" data-dismiss="alert" aria-hidden="true">
+    <%= notice %>
+  <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+  </p>
+<% end %><%= link_to 'New Task', new_task_path, class: "btn btn-success btn-sm" %>
 <h1>Listing tasks</h1>
 
-<table>
+<table class="table  table-hover">  
   <thead>
     <tr>
       <th>Name</th>
@@ -23,7 +27,8 @@
         <td><%= task.done %></td>
         <td><%= task.duration %></td>
         <td><%= link_to 'Edit', edit_task_path(task) %></td>
-        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <%= link_to 'Destroy', task, class: "btn btn-danger btn-sm", method: :delete, data: { confirm: 'Are you sure?' } %>
+        </td>
       </tr>
     <% end %>
   </tbody>
@@ -31,4 +36,3 @@
 
 <br>
 
-<%= link_to 'New Task', new_task_path %>
