Todo und Done Liste getrennt

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,38 +1,13 @@
 <% if notice %> 
-  <p id="notice" class="alert alert-success alert-dismissable fade in" data-dismiss="alert" aria-hidden="true">
-    <%= notice %>
+<p id="notice" class="alert alert-success alert-dismissable fade in" data-dismiss="alert" aria-hidden="true">
+  <%= notice %>
   <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-  </p>
+</p>
 <% end %><%= link_to 'New Task', new_task_path, class: "btn btn-success btn-sm" %>
-<h1>Listing tasks</h1>
-
-<table class="table  table-hover">  
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Deadline</th>
-      <th>Done</th>
-      <th>Duration</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @tasks.each do |task| %>
-      <tr>
-        <td><%= task.name %></td>
-        <td><%= task.deadline %></td>
-        <td><%= task.done %></td>
-        <td><%= task.duration %></td>
-        <td><%= link_to 'Edit', edit_task_path(task) %></td>
-        <%= link_to 'Destroy', task, class: "btn btn-danger btn-sm", method: :delete, data: { confirm: 'Are you sure?' } %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<h2>Todo</h2>
+<%= render partial: "table", locals: {tasks: @todo} %>
+<h2>Done</h2>
+<%= render partial: "table", locals: {tasks: @done} %>
 
 <br>
 
