--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,9 +4,11 @@
   <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
 </p>
 <% end %><%= link_to 'New Task', new_task_path, class: "btn btn-success btn-sm" %>
-<h2>Todo</h2>
+<h2>Todo (<%= pluralize(@todo.count, "Task") %>, <%= pluralize(@todo.sum("duration"), "Hour") %>)
+</h2>
 <%= render partial: "table", locals: {tasks: @todo} %>
-<h2>Done</h2>
+<h2>Done (<%= pluralize(@done.count, "Task") %>, <%= pluralize(@done.sum("duration"), "Hour") %>)
+</h2>
 <%= render partial: "table", locals: {tasks: @done} %>
 
 <br>
