--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,33 +1,38 @@
-<%= form_for(@task) do |f| %>
+<%= form_for @task, :html => { :role => "form"} do |f| %>
+  </div>  
   <% if @task.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h2>
-
-      <ul>
-      <% @task.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+    <div class="panel panel-danger">
+      <div class="panel-heading">
+        <h3 class="panel-title"><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h3>
+      </div>
+      <div class="panel-body">
+        <ul>
+          <% @task.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+          <% end %>
+        </ul>
+      </div>
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="checkbox">
+    <label>
+      <%= f.check_box :done %> <%= f.label :done %>
+    </label>
+  </div>
+  <div class="form-group">
     <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, class: "form-control", placeholder: "Name of Task" %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :deadline %><br>
-    <%= f.date_select :deadline %>
+    <%= f.date_field :deadline, class: "form-control", placeholder: "Deadline of Task" %>
   </div>
-  <div class="field">
-    <%= f.label :done %><br>
-    <%= f.check_box :done %>
-  </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :duration %><br>
-    <%= f.text_field :duration %>
+    <%= f.text_field :duration, class: "form-control", placeholder: "Duration of Task" %>
   </div>
   <div class="actions">
-    <%= f.submit %>
-  </div>
+    <%= f.submit "Save Task", class: "btn btn-primary" %>  <%= link_to 'Cancel', tasks_path, class: "btn btn-default" %>
+  </div> 
 <% end %>
