Erledigt Aufgaben durchgestrichen

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -6,10 +6,10 @@
 <% end %><%= link_to 'New Task', new_task_path, class: "btn btn-success btn-sm" %>
 <h2>Todo (<%= pluralize(@todo.count, "Task") %>, <%= pluralize(@todo.sum("duration"), "Hour") %>)
 </h2>
-<%= render partial: "table", locals: {tasks: @todo} %>
+<%= render partial: "table", locals: {tasks: @todo, css_class: "todo"} %>
 <h2>Done (<%= pluralize(@done.count, "Task") %>, <%= pluralize(@done.sum("duration"), "Hour") %>)
 </h2>
-<%= render partial: "table", locals: {tasks: @done} %>
+<%= render partial: "table", locals: {tasks: @done, css_class: "done"} %>
 
 <br>
 
