--- a/app/views/tasks/_table.html.erb
+++ b/app/views/tasks/_table.html.erb
@@ -10,14 +10,14 @@
 
   <tbody>
     <% tasks.each do |task| %>
-    <tr>
-      <td><%= task.name %></td>
+
+    <tr>      
+      <td class="<%= css_class %>"><%= link_to task.name, edit_task_path(task) %></td>
       <td><%= task.deadline %></td>
       <td><%= task.duration %></td>
-      <td><%= link_to "Edit", edit_task_path(task) %></td>
-      <td><%= link_to 'Destroy', task, class: "btn btn-danger btn-sm", method: :delete, data: { confirm: 'Are you sure?' } %>
-      </td>
+      <td><%= link_to 'Destroy', task, class: "btn btn-danger btn-sm", method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
   <% end %>
 </tbody>
 </table>
+
