--- a/app/views/tasks/_table.html.erb
+++ b/app/views/tasks/_table.html.erb
@@ -1,6 +1,7 @@
 <table class="table  table-hover">  
   <thead>
     <tr>
+      <th></th>
       <th>Name</th>
       <th>Deadline</th>
       <th>Duration</th>
@@ -10,14 +11,18 @@
 
   <tbody>
     <% tasks.each do |task| %>
-
     <tr>      
+      <td>
+        <%= form_for task do |f| %>
+        <%= f.check_box :done, class: "checkable" %>
+        <% end %>
+      </td>
       <td class="<%= css_class %>"><%= link_to task.name, edit_task_path(task) %></td>
       <td><%= task.deadline %></td>
       <td><%= task.duration %></td>
       <td><%= link_to 'Destroy', task, class: "btn btn-danger btn-sm", method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-  <% end %>
-</tbody>
+    </tr>
+    <% end %>
+  </tbody>
 </table>
 
