--- a/app/views/tasks/_table.html.erb
+++ b/app/views/tasks/_table.html.erb
@@ -3,8 +3,20 @@
     <tr>
       <th></th>
       <th>Name</th>
-      <th>Deadline</th>
-      <th>Duration</th>
+      <th>
+        <% if params[:sorting] == "deadline" %>
+        Deadline ^
+        <% else %>
+        <%= link_to "Deadline", tasks_path(sorting: "deadline") %>
+        <% end %>
+      </th>
+      <th>
+        <% if params[:sorting] == "duration" %>
+        Duration ^
+        <% else %>
+        <%= link_to "Duration", tasks_path(sorting: "duration") %>
+        <% end %> 
+      </th>
       <th></th>
     </tr>
   </thead>
