--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,15 +1,14 @@
-<% if notice %> 
-<p id="notice" class="alert alert-success alert-dismissable fade in" data-dismiss="alert" aria-hidden="true">
-  <%= notice %>
-  <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-</p>
-<% end %><%= link_to 'New Task', new_task_path, class: "btn btn-success btn-sm" %>
-<h2>Todo (<%= pluralize(@todo.count, "Task") %>, <%= pluralize(@todo.sum("duration"), "Hour") %>)
-</h2>
+
+<%= link_to 'New Task', new_task_path, class: "btn btn-success btn-sm" %>
+<h2>Todo (<%= pluralize(@todo.count, "Task") %>, <%= pluralize(@todo.sum("duration"), "Hour") %>)</h2>
 <%= render partial: "table", locals: {tasks: @todo, css_class: "todo"} %>
-<h2>Done (<%= pluralize(@done.count, "Task") %>, <%= pluralize(@done.sum("duration"), "Hour") %>)
-</h2>
+<h2>Done (<%= pluralize(@done.count, "Task") %>, <%= pluralize(@done.sum("duration"), "Hour") %>)</h2>
 <%= render partial: "table", locals: {tasks: @done, css_class: "done"} %>
 
+<%= render partial: "table", locals: {tasks: @todo, css_class: "todo"} %>
+<%= render partial: "table", locals: {tasks: @done, css_class: "done"} %>
+
+
 <br>
+
 
